--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/03.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/03.md
@@ -421,8 +421,10 @@ title = "03"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-श्रुतिमयो विहगः परितः प्रभुं व्यचरदाशु विधूतनिशाचरः ।   
-अनुजगाम च भूधरपन्नगः स्फुटफणामणिदीपगणोद्वहः ॥
+श्रुतिमयो विहगः परितः प्रभुं  
+**व्यचरद्** आशु विधूत-निशाचरः ।   
+**अनुजगाम** च भू-धर-पन्नगः  
+स्फुट-फणा-मणि-दीप-गणोद्वहः +++(मार्ग-प्रकाशनाय, छत्त्र-वृत्त्यै च)+++॥
 </details>
 
 <details><summary>मूलम्</summary>
