--- a/laxyam/padyam/kAlidAsaH/kumAra-sambhavam/sarva-prastutiH/07.md
+++ b/laxyam/padyam/kAlidAsaH/kumAra-sambhavam/sarva-prastutiH/07.md
@@ -473,9 +473,22 @@ title = "०७"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-आत्मानमालोक्य च शोभामानमादर्शबिम्बे स्तमितायताक्षी ।  
-हरोपयाने त्वरिता बभूव, स्त्रीणां प्रियालोकफलो हि वेषः ॥ 7.22 ॥  
+आत्मानम् **आलोक्य** च शोभामानम्  
+आदर्श-बिम्बे स्तमितायताक्षी ।  
+हरोपयाने **त्वरिता बभूव** +++(तस्मै स्व-दर्शनाय)+++,  
+स्त्रीणां प्रियालोक-फलो हि वेषः ॥ 7.22 ॥ +++(5)+++  
 </details>
+
+<details><summary>विषयः</summary>
+
+अलङ्कारः, प्रीतिः
+</details>
+
+<details><summary>भावः</summary>
+
+शृङ्गारः
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -490,18 +503,18 @@ title = "०७"
 
 <details><summary>मल्लिनाथः</summary>
 
-आत्मानमिति । किञ्चेति चार्थः । गौरी शोभमानमात्मानं निजशरीरमादर्शबिम्बि दर्पणमण्डले । 'दर्पणे मुकुरादर्शौ' इत्यमरः । स्तिमितायताक्ष्यादरान्निश्चलायतलोचना सत्यालोक्य हरोपयाने हरप्राप्तौ त्वरिता व्यग्रा वभूव । स्त्रीणां वेषो नेपथ्यं प्रियस्य भर्तुरालोको दर्शनं फलं प्रयोजनं यस्य स तथोक्तो हि । अन्यथारण्यचन्द्रिका स्यादिति भावः । अनेन कालाक्षमत्वलक्षणगौत्सुक्यमुक्तमित्यनुसंधेयम् ॥ 7.22 ॥
+आत्मानमिति । किञ्चेति चार्थः । गौरी शोभमानमात्मानं निजशरीरमादर्शबिम्बि दर्पणमण्डले । 'दर्पणे मुकुरादर्शौ' इत्यमरः । स्तिमितायताक्ष्यादरान्निश्चलायतलोचना सत्यालोक्य **हरोपयाने** हरप्राप्तौ त्वरिता व्यग्रा वभूव । स्त्रीणां वेषो नेपथ्यं प्रियस्य भर्तुरालोको दर्शनं फलं प्रयोजनं यस्य स तथोक्तो हि । अन्यथारण्यचन्द्रिका स्यादिति भावः । अनेन कालाक्षमत्वलक्षणगौत्सुक्यमुक्तमित्यनुसंधेयम् ॥ 7.22 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अथाङगुलिभ्यां हरितालमाद्रं माङ्गल्यमादाय मनःशिलां च ।  
+अथाङ्गुलिभ्यां हरितालमाद्रं माङ्गल्यमादाय मनःशिलां च ।  
 कर्णावसक्तामलदन्तपत्त्रं माता तदीयं मुखमुन्नमय्य ॥ 7.23 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-अथाङगुलिभ्यां हरितालमाद्रं माङ्गल्यमादाय मनःशिलां च ।  
+अथाङ्गुलिभ्यां हरितालमाद्रं माङ्गल्यमादाय मनःशिलां च ।  
 कर्णावसक्तामलदन्तपत्त्रं माता तदीयं मुखमुन्नमय्य ॥ 7.23 ॥  
 </details>
 
