--- a/laxyam/padyam/kAlidAsaH/kumAra-sambhavam/sarva-prastutiH/07.md
+++ b/laxyam/padyam/kAlidAsaH/kumAra-sambhavam/sarva-prastutiH/07.md
@@ -474,7 +474,7 @@ title = "०७"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आत्मानम् **आलोक्य** च शोभामानम्  
-आदर्श-बिम्बे स्तमितायताक्षी ।  
+आदर्श-बिम्बे स्तिमितायताक्षी ।  
 हरोपयाने **त्वरिता बभूव** +++(तस्मै स्व-दर्शनाय)+++,  
 स्त्रीणां प्रियालोक-फलो हि वेषः ॥ 7.22 ॥ +++(5)+++  
 </details>
@@ -492,7 +492,7 @@ title = "०७"
 
 <details><summary>मूलम्</summary>
 
-आत्मानमालोक्य च शोभामानमादर्शबिम्बे स्तमितायताक्षी ।  
+आत्मानमालोक्य च शोभामानमादर्शबिम्बे स्तिमितायताक्षी ।  
 हरोपयाने त्वरिता बभूव, स्त्रीणां प्रियालोकफलो हि वेषः ॥ 7.22 ॥  
 </details>
 
