--- a/laxyam/padyam/purANam/nArAyaNIyam/001.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/001.md
@@ -6,10 +6,10 @@ title: ००१ विष्णुस्तुतिः
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-सान्द्रानन्दावबोधात्मकमनुपमितं कालदेशावधिभ्यां  
-निर्मुक्तं नित्यमुक्तं निगमशतसहस्रेण निर्भास्यमानम् ।  
-अस्पष्टं दृष्टमात्रे पुनरुरुपुरुषार्थात्मकं ब्रह्म तत्वम्  
-तत्तावद् भाति साक्षाद् गुरुपवनपुरे हन्त भाग्यं जनानाम् ॥१॥  
+सान्द्रानन्दावबोधात्मकम् **अनुपमितं** काल-देशावधिभ्यां  
+**निर्मुक्तं** नित्य-**मुक्तं** निगम-शत-सहस्रेण **निर्भास्यमानम्** ।  
+**अ-स्पष्टं** दृष्ट-मात्रे पुनर् उरु-पुरुषार्थात्मकं ब्रह्म तत्त्वम्  
+तत्तावद् **भाति** साक्षाद् गुरुपवनपुरे हन्त भाग्यं जनानाम् ॥१॥  
 </details>
 <details><summary>मूलम्</summary>
 
@@ -31,10 +31,10 @@ It is the greatest good fortune of mankind in this Kali Yuga that the eternal tr
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-एवं दुर्लभ्यवस्तुन्यपि सुलभतया हस्तलब्धे यदन्यत्  
-तन्वा वाचा धिया वा भजति बत जनः क्षुद्रतैव स्फुटेयम् ।  
-एते तावद् वयं तु स्थिरतरमनसा विश्वपीडापहत्यै  
-निश्शेषात्मानमेनं गुरुपवनपुराधीशमेवाश्रयामः ॥२॥  
+एवं **दुर्लभ्य**-वस्तुन्य् अपि सुलभतया हस्त-**लब्धे**, यद् अन्यत्  
+तन्वा वाचा धिया वा **भजति** बत जनः क्षुद्रतैव **स्फुटेयम्** ।  
+एते तावद् वयं तु स्थिरतर-मनसा विश्व-**पीडापहत्यै**  
+निश्शेषात्मानम् एनं गुरु-पवन-पुराधीशम् **एवाश्रयामः** ॥२॥  
 </details>
 <details><summary>मूलम्</summary>
 
@@ -56,7 +56,7 @@ Although such an easy access to eternal salvation has been offered to mankind on
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-सत्त्वं यत् तत्पराभ्याम् अपरिकलनतो निर्मलं तेन तावद्  
+सत्त्वं यत् तत्-पराभ्याम् अपरिकलनतो **निर्मलं** तेन तावद्  
 भूतैर् भूतेन्द्रियैस् ते वपुरिति बहुशः श्रूयते व्यासवाक्यम् ।  
 तत् स्वच्छत्वाद् यद् अच्छादित-परसुख-चिद्-गर्भ-निर्भासरूपं  
 तस्मिन् धन्या रमन्ते श्रुतिमतिमधुरे सुग्रहे विग्रहे ते ॥३॥  
